# bld_simulator

./: CLAUDE.md  Cargo.toml  Makefile  README.md  deploy.sh
docs/: 002_document.md  009_bld_exec_simulation.md  011_3style_csv_parser.md  013_modifier_as_struct.md  014_operations_to_turns.md  016_edge_solver_like_corner.md  018_nearby_search_more_variation.md  019_swap_inspection.md  020_bld_workflow.md  021_edge_operations_to_turns.md  024_alternative_move_sequence_explorer.md  025_web_service.md  026_webui.md  999_TODO.md  commands.md
docs/agent_output/: 003_session_notes.md  004_instruction.md  017_implementation_summary.md  018_implementation_summary.md  EDGE_SOLVER_README.md  IMPLEMENTATION_REPORT.md  TEST_EXECUTION_GUIDE.md  edge_implementation_summary.md
examples/: bld_workflow_example.rs  notation_expander.rs  operations_to_turns.rs  state_input_demo.rs
resources/: ubl.json  ubl_parity.json  uf.json  uf_flip.json  ufr_parity.json  ufr_twist.json
rubiks_cube_simulator/: .gitignore  Cargo.toml  README.md
rubiks_cube_simulator/docs/: 005_suggest.md  006_partial_state_compare.md  008_bld_inspection.md  010_corner_operation_format.md  011_3style_csv_parser.md  012_parser_implementation.md  015_implementation_summary.md  017_cli_state_input.md  022_complex_nearby_search.md  023_generics_nearby_search.md  bld_inspection.md  memo.md  solution_search.md
rubiks_cube_simulator/examples/: bld_workflow_example_with_combined_nearby_search.rs  bld_workflow_example_with_nearby_search.rs  combined_nearby_search_from_scramble.rs  corner_bld_workflow.rs  corner_bld_workflow_detailed.rs  edge_bld_workflow.rs  edge_bld_workflow_detailed.rs  expand_json.rs  parse_3style_csv.rs  state_input_demo.rs
rubiks_cube_simulator/resources/: ubl_expanded.json  uf.csv  uf.json  uf_expanded.json  ufr.csv  ufr.json  ufr_expanded.json
rubiks_cube_simulator/src/: cli_state_input.rs  lib.rs  main.rs
rubiks_cube_simulator/tests/: corner_edge_integration.rs  edge_solver_integration.rs  operations_to_turns_test.rs
src/: cli_state_input.rs  lib.rs  main.rs  wasm.rs
src/cube/: mod.rs  operations.rs  (+1 more)
web/: README.md  demo.js  index-v2.html  index-v2.html.bak  index.html  package-lock.json  package.json  serve.js  tsconfig.json
(+61 files in other folders)
