[package]
name = "bld_simulator"
version = "0.1.0"
edition = "2021"
authors = ["greenteasocha <kouheiatts@gmail.com>"]
description = "Interactive Rubik's Cube state editor with combined nearby search workflow"
repository = "https://https://github.com/greenteasocha/bld_simulator"
keywords = ["rubiks-cube", "puzzle", "solver", "tui"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "bld_simulator"
path = "src/main.rs"

[lib]
name = "bld_simulator"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.28", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
